# databse-manager

./: .env  Cargo.toml  build.rs
migrations/2022-10-22-130531_create_comments/: down.sql  up.sql
migrations/2023-01-02-142157_init_tables/: down.sql  up.sql
migrations/2023-01-07-115829_cleans_data/: up.sql
proto/: scoring.proto  scraper_rpc.proto
src/: lib.rs  model.rs  schema.rs
src/services/: mod.rs
