[package]
name = "db_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]] # Bin to run the HelloWorld gRPC client
name = "listener"
path = "src/bin/reciever/mod.rs"

[[bin]]
name = "sender"
path = "src/bin/sender/mod.rs"

[[bin]]
name = "prediction"
path = "src/bin/prediction/mod.rs"

[[bin]]
name = "assigner"
path = "src/bin/assigner/mod.rs"

[dependencies]
tonic = "0.8"
prost = "0.11"
diesel = { version = "2.0.0", features = ["postgres"] }
dotenvy = "0.15"

tokio = { version = "1.0", features = ["full", "macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.8"
